dnl $Id$
AC_INIT(opennap.h)
AM_INIT_AUTOMAKE(opennap,0.36)
AM_MAINTAINER_MODE
AM_PROG_CC_STDC
AC_HEADER_STDC
AC_MSG_CHECKING(for socklen_t)
AC_EGREP_HEADER(socklen_t, /usr/include/sys/socket.h,
	[AC_MSG_RESULT(yes)
	AC_DEFINE(HAVE_SOCKLEN_T)],
	[AC_MSG_RESULT(no)])
AC_C_BIGENDIAN
AC_CHECK_SIZEOF(long)

dnl check for zlib installed in /usr/local
if test -f /usr/local/lib/libz.a; then
	LIBS="$LIBS -L/usr/local/lib -lz"
	CFLAGS="$CFLAGS -I/usr/local/include"
else
AC_CHECK_LIB(z, compress2,[LIBS="$LIBS -lz"],
	[AC_MSG_ERROR(you must install zlib first)])
fi

AC_CHECK_LIB(xnet,gethostbyname)
AC_CHECK_LIB(nsl,socket)
AC_CHECK_LIB(socket,gethostbyname)
AC_CHECK_LIB(wrap,request_init)
AC_CHECK_FUNCS(mlockall)

ac_cv_warnings=yes
AC_ARG_ENABLE(warnings, [  --disable-warnings	Turn of GCC compiler warnings ],
	[ac_cv_warnings=$enableval])
if test $ac_cv_warnings != "no"; then
	CFLAGS="-W -Wall -Wmissing-prototypes -Wcast-align -pedantic $CFLAGS"
fi

AC_ARG_ENABLE(debug, [  --enable-debug	Turn on memory debugging code],
	[if test $enableval = yes; then
		AC_DEFINE(DEBUG)
	fi])

AC_ARG_WITH(fd-setsize,
	[  --with-fd-setsize=N	Set max connections with select() to N],
	[AC_DEFINE_UNQUOTED(FD_SETSIZE,$withval)])

dnl support for resume is now turned off by default
AC_ARG_ENABLE(resume, [  --enable-resume	Turn on support for resume],
	[if test $enableval = yes; then
		AC_DEFINE(RESUME)
	fi])

dnl support for saving email address is turned off by default
AC_ARG_ENABLE(email,
	[  --enable-email	Turn on support for saving client email addresses],
	[if test $enableval = yes; then
		AC_DEFINE(EMAIL)
	fi])

AC_OUTPUT(Makefile)
